# als-challenge

./: .dockerignore  .gitignore  404.html  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/cpp/: index.html
api/python/: index.html
architecture/: index.html
assets/results/: classification_report.txt
cfanalysis/: __main__.py  classify.py  features.py  plots.py  types.py
cfclassify/: __main__.py  classify.py  features.py  model.py  plots.py  types.py
classification/: index.html
development/: index.html
docs/: architecture.md  classification.md  development.md  index.md  results.md  usage.md
docs/api/: cpp.md  python.md
docs/assets/results/: sample_summary.csv
results/: index.html
scripts/: bench_extract.py
search/: search_index.json
src/bindings/python/: bindings.cpp
src/core/: access.cpp  access.hpp  core.cpp  core.hpp  extract.cpp  extract.hpp  features.cpp  features.hpp  stats.cpp  stats.hpp  util.hpp
tests/cpp/: test_extract.cpp
usage/: index.html
